--- a/simple-pub-sub/docker-compose.yml
+++ b/simple-pub-sub/docker-compose.yml
@@ -1,27 +1,27 @@
 version: '3'
 
 services:
+  ws1:
+    image: wsapp
+    environment:
+      - APPID=1111
+  ws2:
+    image: wsapp
+    environment:
+      - APPID=2222
+  ws3:
+    image: wsapp
+    environment:
+      - APPID=3333
+  ws4:
+    image: wsapp
+    environment:
+      - APPID=4444
+  rds:
+    image: redis
   lb:
     image: nginx
     ports:
       - "8080:8080"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-  ws1:
-    image: wsapp
-    environment:
-      - AAPID=1111
-  ws2:
-    image: wsapp
-    environment:
-      - AAPID=2222
-  ws3:
-    image: wsapp
-    environment:
-      - AAPID=3333
-  ws4:
-    image: wsapp
-    environment:
-      - AAPID=444
-    rds:
-      image: redis
