--- a/simple-pub-sub/nginx.conf
+++ b/simple-pub-sub/nginx.conf
@@ -1,19 +1,27 @@
 http {
     upstream all {
-        server w1:8080;
-        server w2:8080;
-        server w3:8080;
-        server w4:8080;
+        server ws1:8080;
+        server ws2:8080;
+        server ws3:8080;
+        server ws4:8080;
     }
 
     server {
-        listen: 8080;
+        listen 8080;
         location / {
+            # https://www.serverlab.ca/tutorials/linux/web-servers-linux/how-to-configure-nginx-for-websockets/
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+
             proxy_read_timeout 1800;
             proxy_connect_timeout 1800;
             proxy_send_timeout 1800;
             send_timeout 1800;
-            proxy_pass http://all/;
+
+            proxy_pass http://all;
         }
 
     }
